--- a/wait-app/src/index.css
+++ b/wait-app/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -10,12 +10,172 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h2 {
+  text-align: "center";
+  margin: 20;
+  padding: 15px;
+}
+
+.app {
+  background-color: #4C424C;
+  /* background-image: url('./assets/cold-bg.jpg'); */
+  background-size: cover;
+  background-position: bottom;
+  /* background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('./assets/airplane.gif'); */
+  /* transition: 0.4s ease-out; */
+}
+
+/* .app.warm {
+  background-image: url('./assets/warm-bg.jpg');
+} */
+
+main {
+  min-height: 100vh;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
+  /* padding: 25px; */
+}
+
+.enter-destination {
+  text-align: center;
+}
+
+
+.title-bar {
+  background-color: rgba(146, 0, 255, 0.47);
+  display: block;
+  width: 100%;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+  
+}
+
+.logo {
+  margin-left: 40px;
+  color: white;
+  font-size: 50px;
+  font-family: 'Dongle', sans-serif;
+}
+
+
+.search-box {
+  text-align: center;
+  width: 100%;
+  margin: 40px auto;
+  display: inline-block;
+}
+
+.search-box .search-bar {
+
+  position: relative;
+  padding: 20px;
+
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 16px;
+  /* margin-top: -25px; */
+
+  box-shadow: 0px 5px 10px 10px rgba(0, 0, 0, 0.2);
+  
+  color: #313131;
+  font-size: 20px;
+
+  transition: 0.4s ease;
+}
+
+.search-box .search-bar:focus {
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.location-box .location {
+  color: #FFF;
+  font-size: 32px;
+  font-weight: 500;
+  text-align: center;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+
+.location-box .date {
+  color: #FFF;
+  font-size: 20px;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
+}
+
+.weather-box {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.weather-box .temp {
+  position: relative;
+  display: inline-block;
+  margin: 30px auto;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+
+  padding: 15px 25px;
+
+  color: #FFF;
+  font-size: 25px;
+  font-weight: 900;
+
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+  text-align: center;
+  box-shadow: 5px 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.weather-box .weather {
+  color: #FFF;
+  font-size: 48px;
+  font-weight: 700;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+
 a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
-a:hover {
+
+/* a:hover {
   text-decoration: none;
-  color: rgba(0, 0, 0, 0.349);
+  color: blue;
+} */
+
+.gradient-text{
+  background: linear-gradient(to right, rgb(64, 97, 243),pink,crimson);
+  background-size: 200% 200%;
+  animation: rainbow 2s ease-in-out infinite;
+  background-clip: text;
+  -webkit-background-clip:text;
+  color:white;
+  transition: color .2s ease-in-out;
+}
+
+.gradient-text:hover{
+  color:rgba(0,0,0,0);
+}
+
+@keyframes rainbow { 
+  0%{background-position:left}
+  50%{background-position:right}
+  100%{background-position:left}
 }
