--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,35 @@ main {
   font-family: 'Dongle', sans-serif;
 }
 
+.center-blue {
+  border-radius: 12px;
+  background-color: rgba(63, 231, 243, 0.7); /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+  font-family: 'Dongle', sans-serif;
+  margin-top: 20px;
+}
+
+.center-red {
+  border-radius: 12px;
+  background-color: rgba(236, 59, 59, 0.7); /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+  font-family: 'Dongle', sans-serif;
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
 .title-bar {
   background-color: rgba(146, 0, 255, 0.47);
   display: block;
